k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: platform-cedar-sidecar
  namespace: platform
  labels:
    external-dns: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: tuxgrid.com
spec:
  parentRefs:
  - kind: Gateway
    name: gateway-external
    namespace: gateway
    sectionName: https
  hostnames:
  - cedar.platform.tuxgrid.com
  rules:
  - backendRefs:
    - name: platform-cedar-sidecar
      port: 80
